tests/ui/comptime/const_comptime.stderr
error: a function cannot be both `comptime` and `const`
  --> $DIR/const_comptime.rs:4:1
   |
LL | const fn foo() {}
   | ^^^^^

error: aborting due to 1 previous error

